[tool.poetry]
name = "ai-hub"
version = "0.1.0"
description = "Software running at the AI-HUB Clients and Main-Server"
authors = ["Tjark Ziehm <ziehm@balticmaterials.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ai_hub"}]

[tool.poetry.dependencies]
python = "^3.11"
# Linux
# numpy = { url = "https://download.pytorch.org/whl/numpy-1.24.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
# torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# torchaudio = { url  = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# Windows 
numpy = { url = "https://download.pytorch.org/whl/numpy-1.24.1-cp311-cp311-win_amd64.whl"}
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-win_amd64.whl"}
sphinx = "^7.0.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true